==============
lxml changelog
==============

Latest changes
==================

Features added
--------------

* ``lxml.html.iterlinks`` now returns links inside meta refresh tags.

* New ``XMLParser`` option ``collect_ids=False`` to disable ID hash table
  creation.  This can substantially speed up parsing of documents with many
  different IDs that are not used.

* The parser uses per-document hash tables for XML IDs.  This reduces the
  load of the global parser dict and speeds up parsing for documents with
  many different IDs.

* ``ElementTree.getelementpath(element)`` returns a structural ElementPath
  expression for the given element, which can be used for lookups later.

* ``xmlfile()`` accepts a new argument ``close=True`` to close file(-like)
  objects after writing to them.  Before, ``xmlfile()`` only closed the file
  if it had opened it internally.

* Allow "bytearray" type for ASCII text input.

Bugs fixed
----------

Other changes
-------------

* LP#400588: decoding errors have become hard errors even in recovery mode.
  Previously, they could lead to an internal tree representation in a mixed
  encoding state, which lead to very late errors or even silently incorrect
  behaviour during tree traversal or serialisation.

* Requires Python 2.6, 2.7, 3.2 or later. No longer supports
  Python 2.4, 2.5 and 3.1, use lxml 3.3.x for those.

* Requires libxml2 2.7.0 or later and libxslt 1.1.23 or later,
  use lxml 3.3.x with older versions.


3.3.6 (2014-08-28)
==================

Bugs fixed
----------

* Prevent tree cycle creation when adding Elements as siblings.

* LP#1361948: crash when deallocating Element siblings without parent.

* LP#1354652: crash when traversing internally loaded documents in XSLT
  extension functions.


3.3.5 (2014-04-18)
==================

Bugs fixed
----------

* HTML cleaning could fail to strip javascript links that mix control
  characters into the link scheme.


3.3.4 (2014-04-03)
==================

Features added