@@ -160,3 +160,20 @@ Bug 690319: Leading whitespace before doctype declaration should not raise an er
     >>> print(tostring(etree_document, encoding=unicode))
     <html></html>
 
+Feature https://github.com/lxml/lxml/pull/140: ensure_head_body option:
+
+    >>> from lxml.html import document_fromstring, tostring
+    >>> from functools import partial
+    >>> tos = partial(tostring, encoding=unicode)
+    >>> print(tos(document_fromstring('<p>test</p>')))
+    <html><body><p>test</p></body></html>
+    >>> print(tos(document_fromstring('<p>test</p>', ensure_head_body=True)))
+    <html><head></head><body><p>test</p></body></html>
+    >>> print(tos(document_fromstring('<meta>')))
+    <html><head><meta></head></html>
+    >>> print(tos(document_fromstring('<meta>', ensure_head_body=True)))
+    <html><head><meta></head><body></body></html>
+    >>> print(tos(document_fromstring('<html></html>')))
+    <html></html>
+    >>> print(tos(document_fromstring('<html></html>', ensure_head_body=True)))
+    <html><head></head><body></body></html>
